--- a/Lab7Report/Lab7.tex
+++ b/Lab7Report/Lab7.tex
@@ -166,7 +166,7 @@ The following graphs are the result of a simulation on $5$ different graphs with
 \subsection{Task 1}
 In the simulations with fixed parameters of task 1 there is a big difference between the networks. In the densest ones (Erdös-Renyi, complete graph) the infection spreads very quickly and reaches all the nodes (at every time step we will only have a small fraction of non-infected nodes: those which recovered in the previous step), while in the tree and the scale-free networks the infection decreases until it goes extinct. In the case of the star graph, the number of infected nodes stays at slightly below 10\% of the nodes.
 
-While it is obvious that edge density has an effect on determining whether an infection spreads or goes extinct, notice that the tree and star graphs have the same edge density completely different behaviours. From this, we can conclude that the shape of the network also plays an important role.
+While it is obvious that edge density has an effect on determining whether an infection spreads or goes extinct, notice that the tree and star graphs have the same edge density but completely different behaviours. From this, we can conclude that the shape of the network also plays an important role.
 
 \subsection{Task 2}
 We notice that we see we crossed a threshold value for the complete graph, the Erdos-Renyi graph and the scalefree graph. The star graph, tree, however, do not seem to have crossed any threshold. If we would 
