--- a/Lab7Report/Lab7.tex
+++ b/Lab7Report/Lab7.tex
@@ -115,7 +115,7 @@ In this first section we present the results of the simulation using fixed param
 \end{figure}
 \begin{figure}[!h] %  figure placement: here, top, bottom, or page
    \centering
-   \includegraphics[width=0.85\textwidth]{task1_erdosrenyi} 
+   \includegraphics[width=0.85\textwidth]{task1_Erdos-Renyi} 
 \caption{Task 1. Fixed parameters $\gamma=0.05$ and $\beta=0.005$}
    \label{task1_erdosrenyi}
 \end{figure}
@@ -134,7 +134,7 @@ In this first section we present the results of the simulation using fixed param
 
 
 \subsection{Task 2}
-The following graphs are the result of a simulation on $5$ different graphs with $100$ timesteps. For every graph we took $\gamma=.1$, then we calculated the thresholdvalue for $\beta$. We increased $\beta$ by $10\%$ (plotted dots) and decreased $\beta$ by $10\%$ (plotted red line). We started with $5\%$ infected
+The following graphs are the result of a simulation on $5$ different graphs with $250$ timesteps. For every graph we took $\gamma=.1$, then we calculated the thresholdvalue for $\beta$. We increased $\beta$ by $10\%$ (plotted black line) and decreased $\beta$ by $10\%$ (plotted red line). We started with $5\%$ of the population infected.
 
 \begin{figure}[htbp] %  figure placement: here, top, bottom, or page
    \centering
@@ -148,7 +148,7 @@ The following graphs are the result of a simulation on $5$ different graphs with
 \end{figure}
 \begin{figure}[htbp] %  figure placement: here, top, bottom, or page
    \centering
-   \includegraphics[width=\textwidth]{thresholdSimulation_erdosRenyi} 
+   \includegraphics[width=\textwidth]{thresholdSimulation_Erdos-Renyi} 
    \label{erdosRenyi}
 \end{figure}
 \begin{figure}[htbp] %  figure placement: here, top, bottom, or page
@@ -169,16 +169,16 @@ In the simulations with fixed parameters of task 1 there is a big difference bet
 While it is obvious that edge density has an effect on determining whether an infection spreads or goes extinct, notice that the tree and star graphs have the same edge density but completely different behaviours. From this, we can conclude that the shape of the network also plays an important role.
 
 \subsection{Task 2}
-We notice that we see we crossed a threshold value for the complete graph, the Erdos-Renyi graph and the scalefree graph. The star graph, tree, however, do not seem to have crossed any threshold. If we would 
+We notice that we see we crossed a threshold value for the complete graph, the Erdös-Renyi graph and the scalefree graph. The star graph, tree, however, do not seem to have crossed any threshold. If we would 
 
-From this, we can conclude that the theory doesn't hold for some graph, in particular it doesn't hold for the trees we tested it on. To be sure it does hold for the complete, Erdos-Renyi and scalefree graph, we would have to do some more tests (values closer to the threshold, different numbers of vertices, run the simulation longer), but we are confident there is a threshold here.
+From this, we can conclude that the theory doesn't hold for some graph, in particular it doesn't hold for the trees we tested it on. To be sure it does hold for the complete, Erdös-Renyi and scalefree graph, we would have to do some more tests (values closer to the threshold, different numbers of vertices, run the simulation longer), but we are confident there is a threshold here.
 
 \section{Methods}
 To find the thresholds we used ARPACK, a package partially built in in igraph. It has fast methods for calculating the largest eigenvalue of a graph. Calculating the $5$ eigenvalues of the $5$ graphs with $2000$ vertices only takes seconds.
 
 For generating the graphs and plots we set a seed so it can be easily replicated.
 
-We chose the parameters for the Erdos-Renyi and scalefree graph so that they both had about $20000$ edges.
+We chose the parameters for the Erdös-Renyi and scalefree graph so that they both had about $20000$ edges.
 
 \subsection{SIS infection simulation}
 The SIS infection simulation is done by the function \texttt{spread}, in \texttt{Lab7.R}. This function receives as input the adjacency matrix $M$ of the network, a vector $v$ indicating which nodes are infected at the initial time, the parameters $\beta$ and $\gamma$, and $tmax$, the maximum time for which we will run the simulation. 
