--- a/Lab7Report/Lab7.tex
+++ b/Lab7Report/Lab7.tex
@@ -100,32 +100,32 @@ We will simulate a SIS epidemic model on networks. We will use a binary tree, a 
 
 \section{Results}
 \subsection{Task 1}
-In this first section we present the results of the simulation using fixed parameters $\gamma=0.05$ and $\beta=0.005$ for all 5 networks.  Figures \ref{task1_tree}, \ref{task1_scaleFree}, \ref{task1_erdosrenyi}, \ref{task1_complete} and \ref{task1_star}.
-\begin{figure}[!h] %  figure placement: here, top, bottom, or page
+In this first section we present the results of the simulation using fixed parameters $\gamma=0.05$ and $\beta=0.005$ for all 5 networks, each with 2000 nodes.  Figures \ref{task1_tree}, \ref{task1_scaleFree}, \ref{task1_erdosrenyi}, \ref{task1_complete} and \ref{task1_star} correspond to the tree, scale-free, Erdös-Renyi, complete and star graphs, respectively.
+\begin{figure}[h] %  figure placement: here, top, bottom, or page
    \centering
    \includegraphics[width=0.85\textwidth]{task1_tree} 
    \caption{Task 1. Fixed parameters $\gamma=0.05$ and $\beta=0.005$}
    \label{task1_tree}
 \end{figure}
-\begin{figure}[!h] %  figure placement: here, top, bottom, or page
+\begin{figure}[h] %  figure placement: here, top, bottom, or page
    \centering
    \includegraphics[width=0.85\textwidth]{task1_scaleFree}
 \caption{Task 1. Fixed parameters $\gamma=0.05$ and $\beta=0.005$} 
 \label{task1_scaleFree}
 \end{figure}
-\begin{figure}[!h] %  figure placement: here, top, bottom, or page
+\begin{figure}[h] %  figure placement: here, top, bottom, or page
    \centering
    \includegraphics[width=0.85\textwidth]{task1_Erdos-Renyi} 
 \caption{Task 1. Fixed parameters $\gamma=0.05$ and $\beta=0.005$}
    \label{task1_erdosrenyi}
 \end{figure}
-\begin{figure}[!h] %  figure placement: here, top, bottom, or page
+\begin{figure}[h] %  figure placement: here, top, bottom, or page
    \centering
    \includegraphics[width=0.85\textwidth]{task1_complete} 
 \caption{Task 1. Fixed parameters $\gamma=0.05$ and $\beta=0.005$}
    \label{task1_complete}
 \end{figure}
-\begin{figure}[!h] %  figure placement: here, top, bottom, or page
+\begin{figure}[h] %  figure placement: here, top, bottom, or page
    \centering
    \includegraphics[width=0.85\textwidth]{task1_star} 
 \caption{Task 1. Fixed parameters $\gamma=0.05$ and $\beta=0.005$}
@@ -166,12 +166,12 @@ The following graphs are the result of a simulation on $5$ different graphs with
 \subsection{Task 1}
 In the simulations with fixed parameters of task 1 there is a big difference between the networks. In the densest ones (Erdös-Renyi, complete graph) the infection spreads very quickly and reaches all the nodes (at every time step we will only have a small fraction of non-infected nodes: those which recovered in the previous step), while in the tree and the scale-free networks the infection decreases until it goes extinct. In the case of the star graph, the number of infected nodes stays at slightly below 10\% of the nodes.
 
-While it is obvious that edge density has an effect on determining whether an infection spreads or goes extinct, notice that the tree and star graphs have the same edge density but completely different behaviours. From this, we can conclude that the shape of the network also plays an important role.
+While it is obvious that edge density has an effect on determining whether an infection spreads or goes extinct, notice that the tree and star graphs have the same edge density but completely different behaviours. From this, we can conclude that the shape of the network and, more specifically, values like the diameter (which is very big on trees and only two on the star) probably play an important role too.
 
 \subsection{Task 2}
-We notice that we see we crossed a threshold value for the complete graph, the Erdös-Renyi graph and the scalefree graph. The star graph, tree, however, do not seem to have crossed any threshold. If we would 
+In the Erdös-Renyi and the complete graphs the experimental results match the theory very well: above the threshold the infection spreads while below it goes extinct. The star graph, tree, and the scalefree graph, however, do not seem to have crossed any threshold, and the number of infected nodes ends up at zero in all cases (though it takes longer when above the theoretical threshold).
 
-From this, we can conclude that the theory doesn't hold for some graph, in particular it doesn't hold for the trees we tested it on. To be sure it does hold for the complete, Erdös-Renyi and scalefree graph, we would have to do some more tests (values closer to the threshold, different numbers of vertices, run the simulation longer), but we are confident there is a threshold here.
+These results seem to suggest that the theory doesn't hold for some graphs, in particular it doesn't hold for the trees we tested it on. To be sure it does hold for the complete, Erdös-Renyi and scalefree graph, we would have to do some more tests (values closer to the threshold, different numbers of vertices, run the simulation longer), but we are confident there is a threshold here.
 
 \section{Methods}
 To find the thresholds we used ARPACK, a package partially built in in igraph. It has fast methods for calculating the largest eigenvalue of a graph. Calculating the $5$ eigenvalues of the $5$ graphs with $2000$ vertices only takes seconds.
